--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+async-timeout==3.0.1
+boto==2.49.0
 discord.py==1.7.3
 ffmpy==0.3.0
 PyNaCl==1.4.0
-youtube-dl==2021.6.6
-python-dotenv
 ffmpeg-python
+youtube-dl==2021.6.6
