--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-aiohttp==3.7.4.post0
+aiodns==3.0.0
+aiohttp>=3.7.4
 altgraph==0.17
 async-timeout==3.0.1
 attrs==19.1.0
@@ -74,6 +75,7 @@ traitlets==5.0.5
 typing==3.7.4.3
 typing-extensions==3.10.0.0
 undetected-chromedriver==3.0.2
+urllib3==1.26.4
 validator-collection==1.5.0
 wcwidth==0.2.5
 webdriver-manager==3.4.2
