--- a/requirements.txt
+++ b/requirements.txt
@@ -75,7 +75,7 @@ traitlets==5.0.5
 typing==3.7.4.3
 typing-extensions==3.10.0.0
 undetected-chromedriver==3.0.2
-urllib3==1.26.4
+urllib3>=1.26.5
 validator-collection==1.5.0
 wcwidth==0.2.5
 webdriver-manager==3.4.2
