--- a/requirements.txt
+++ b/requirements.txt
@@ -1,84 +1,14 @@
-aiodns==3.0.0
-aiohttp>=3.7.4
-altgraph==0.17
+aiohttp==3.7.4.post0
 async-timeout==3.0.1
-attrs==19.1.0
-backcall==0.2.0
-backoff-utils==1.0.1
-beautifulsoup4==4.9.3
-blessings==1.7
-boto==2.49.0
-bpython==0.21
-certifi==2020.12.5
-cffi==1.14.5
+attrs==21.2.0
+cffi==1.15.0
 chardet==4.0.0
-colorama==0.4.4
-configparser==5.0.2
-crayons==0.4.0
-curtsies==0.3.5
-cwcwidth==0.1.4
-decorator==5.0.9
 discord.py==1.7.3
-et-xmlfile==1.1.0
-fake-useragent==0.1.11
-ffmpeg-python==0.2.0
-ffmpy==0.3.0
-future==0.18.2
-greenlet==1.1.1
-idna==2.10
-ipykernel==5.5.5
-ipython==7.25.0
-ipython-genutils==0.2.0
-jdcal==1.4.1
-jedi==0.18.0
-jsonschema==3.2.0
-jupyter-client==6.1.12
-jupyter-core==4.7.1
-lxml==4.6.3
-matplotlib-inline==0.1.2
-maxminddb==2.0.3
-multidict==5.1.0
-numpy==1.20.3
-openpyxl==3.0.7
-pafy==0.5.5
-pandas==1.2.4
-parso==0.8.2
-pefile==2021.5.24
-pickleshare==0.7.5
-prompt-toolkit==3.0.19
-proxybroker==0.3.2
-pycares==4.0.0
+idna==3.3
+multidict==5.2.0
 pycparser==2.20
-pydub==0.25.1
-Pygments==2.9.0
-pyinstaller==4.5.1
-pyinstaller-hooks-contrib==2021.2
 PyNaCl==1.4.0
-pyproxywebscrapper==4.0.0
-pyrsistent==0.17.3
-python-dateutil==2.8.1
-python-decouple==3.4
-python-dotenv==0.19.0
-pytz==2021.1
-pyxdg==0.27
-pyzmq==22.1.0
-requests==2.25.1
-scrapy-rotating-proxies==0.6.2
-selenium==3.141.0
 six==1.16.0
-soupsieve==2.2.1
-SpeechRecognition==3.8.1
-tornado==6.1
-traitlets==5.0.5
-typing==3.7.4.3
-typing-extensions==3.10.0.0
-undetected-chromedriver==3.0.2
-urllib3>=1.26.5
-validator-collection==1.5.0
-wcwidth==0.2.5
-webdriver-manager==3.4.2
-websockets==9.1
-xlrd==2.0.1
-XlsxWriter==1.4.3
-yarl==1.6.3
-youtube-dl
+typing-extensions==3.10.0.2
+yarl==1.7.0
+youtube-dl==2021.6.6
